--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,12 +2,12 @@
   "name": "Gestione Turni",
   "short_name": "Turni",
   "description": "Applicazione per la gestione dei turni e degli orari di lavoro",
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "orientation": "portrait-primary",
-  "scope": "/",
+  "scope": ".",
   "icons": [
     {
       "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect fill='%232c3e50' width='192' height='192'/><text x='96' y='130' font-size='100' font-weight='bold' text-anchor='middle' fill='white'>📅</text></svg>",
